--- a/_posts/2016-08-25-first-post.html
+++ b/_posts/2016-08-25-first-post.html
@@ -1,7 +1,9 @@
 ---
 layout: default
-title: my first post
+title: Flexbox栅格系统
+tags: [css, Flexbox, 栅格系统]
 ---
 <h1>{{ page.title }}</h1>
-<p>This is my first post.Click the link below to go back to index:</p>
+<p>之前看了一篇将Flexbox栅格系统的文章，觉得很棒，现记录下来，并做几个实验，写一写自己的理解</p>
+<p>原文链接：</p><a href="https://zhuanlan.zhihu.com/p/21887541">https://zhuanlan.zhihu.com/p/21887541</a>
 <a href="{{ site.baseurl }}/index.html">Go back</a>
