--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 ---
 layout: default
 ---
-<h1>测试页面</h1>
-<p>This is the index page</p>
-<p>My post list:</p>
-<ul>
-   {% for post in site.posts %}
-       <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-   {% endfor %}
-</ul>
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<header class="index-header">
+	<h1 class="index-h1">记录一些知识</h1>
+	<p>水平有限，请见谅</p>
+</header> 
+<nav class="index-left-nav">
+	<a class="nav-list css"  href="#">css</a> 
+	<a class="nav-list canvas" href="#">canvas</a>
+	<a class="nav-list js" href="#">js</a>
+	<a class="nav-list nodeJs" href="#">nodeJs</a>
+	<a class="nav-list gulp" href="#">gulp</a>
+	<a class="nav-list requireJs" href="#">requireJs</a>
+	
+	<a class="nav-list other other-text" href="#">随笔</a>
+</nav>
+<div class="index-body">
+	<div class="index-content-list">
+		<ul class="content-list">
+		   {% for post in site.posts %}
+		       <li class="list-box"><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+		   {% endfor %}
+		</ul>	
+	</div>
+	
+</div>
