更新样式和结构

--- a/_posts/2016-08-25-first-post.html
+++ b/_posts/2016-08-25-first-post.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-title: Flexbox栅格系统
+layout: index
+title: Flexbox栅格系统1
 tags: [css, Flexbox, 栅格系统]
 ---
 <h1>{{ page.title }}</h1>
