--- a/index.html
+++ b/index.html
@@ -1,28 +1,42 @@
 ---
 layout: default
 ---
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <header class="index-header">
-	<h1 class="index-h1">记录一些知识</h1>
-	<p>水平有限，请见谅</p>
-</header> 
-<nav class="index-left-nav">
-	<a class="nav-list css"  href="#">css</a> 
-	<a class="nav-list canvas" href="#">canvas</a>
-	<a class="nav-list js" href="#">js</a>
-	<a class="nav-list nodeJs" href="#">nodeJs</a>
-	<a class="nav-list gulp" href="#">gulp</a>
-	<a class="nav-list requireJs" href="#">requireJs</a>
 	
-	<a class="nav-list other other-text" href="#">随笔</a>
+</header> 
+<div class="navBtn" id="navBtn">
+	<span></span>
+</div>
+<nav class="index-left-nav">
+	<div class="index-user">
+		<img src="" class="index-user-img">
+	</div>
+	<div class="navList">
+		<a class="nav-list css"  href="#" hover-text="css">css</a> 
+		<a class="nav-list canvas" href="#" hover-text="canvas">canvas</a>
+		<a class="nav-list js" href="#" hover-text="javaScript">js</a>
+		<a class="nav-list nodeJs" href="#" hover-text="nodeJs">nodeJs</a>
+		<a class="nav-list gulp" href="#" hover-text="gulp">gulp</a>
+		<a class="nav-list requireJs" href="#" hover-text="requireJs">requireJs</a>
+		
+		<a class="nav-list other other-text" href="#">随笔</a>
+	</div>
+	
 </nav>
 <div class="index-body">
-	<div class="index-content-list">
+<h1 class="index-h1">Record some, learn some</h1> 
+	<div class="index-content-list" id="index-content-list">
 		<ul class="content-list">
 		   {% for post in site.posts %}
 		       <li class="list-box"><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 		   {% endfor %}
-		</ul>	
+		</ul>
+		{{content }}	
 	</div>
-	
+
+	<div class="shadow top-left"></div>
+	<div class="shadow top-right"></div>
+	<div class="shadow bottom-left"></div>
+	<div class="shadow bottom-right"></div>
+	<div class="index-body-mask"></div>
 </div>
