更新样式和结构（动态列表现在用的应该是有问题的方法）

--- a/_posts/2016-08-25-first-post.html
+++ b/_posts/2016-08-25-first-post.html
@@ -1,7 +1,7 @@
 ---
-layout: index
-title: Flexbox栅格系统1
-tags: [css, Flexbox, 栅格系统]
+layout: detail
+title: Flexbox栅格系统1canvas
+tags: [canvas]
 ---
 <h1>{{ page.title }}</h1>
 <p>之前看了一篇将Flexbox栅格系统的文章，觉得很棒，现记录下来，并做几个实验，写一写自己的理解</p>
