--- a/_posts/2016-08-26-first-post.html
+++ b/_posts/2016-08-26-first-post.html
@@ -1,7 +1,7 @@
 ---
-layout: default
-title: Flexbox栅格系统
-tags: [css, Flexbox, 栅格系统]
+layout: detail
+title: Flexbox栅格系统css
+tags: [css]
 ---
 <h1>{{ page.title }}</h1>
 <p>之前看了一篇将Flexbox栅格系统的文章，觉得很棒，现记录下来，并做几个实验，写一写自己的理解</p>
