--- a/index.html
+++ b/index.html
@@ -12,43 +12,27 @@ layout: default
 		<img src="" class="index-user-img">
 	</div>
 	<div class="navList">
-		<a class="nav-list css"  href="#" hover-text="css" type="css">css</a> 
-		<a class="nav-list canvas" href="#" hover-text="canvas" type="canvas">canvas</a>
-		<a class="nav-list js" href="#" hover-text="javaScript" type="javaScript">js</a>
-		<a class="nav-list nodeJs" href="#" hover-text="nodeJs" type="nodeJs">nodeJs</a>
-		<a class="nav-list gulp" href="#" hover-text="gulp" type="gulp">gulp</a>
-		<a class="nav-list requireJs" href="#" hover-text="requireJs" type="requireJs">requireJs</a>
+		<a class="nav-list css"  href="javascript:;" hover-text="css" type="css" data-href="csslist.html">css</a> 
+		<a class="nav-list canvas" href="javascript:;" hover-text="canvas" type="canvas" data-href="canvasList.html">canvas</a>
+		<a class="nav-list js" href="javascript:;" hover-text="javaScript" type="javaScript" data-href="javaScriptList.html">js</a>
+		<a class="nav-list nodeJs" href="javascript:;" hover-text="nodeJs" type="nodeJs" data-href="nodeJsList.html">nodeJs</a>
+		<a class="nav-list gulp" href="javascript:;" hover-text="gulp" type="gulp" data-href="gulpList.html">gulp</a>
+		<a class="nav-list requireJs" href="javascript:;" hover-text="requireJs" type="requireJs" data-href="requireJsList.html">requireJs</a>
 		
-		<a class="nav-list other other-text" href="#" hover-text="随笔" type="other">随笔</a>
+		<a class="nav-list other other-text" href="javascript:;" hover-text="随笔" type="other"  data-href="otherList.html">随笔</a>
 	</div>
 	
 </nav>
 <div class="index-body">
 <h1 class="index-h1">Record some, learn some</h1> 
 	<div class="index-content-list" id="index-content-list"> 
-		<ul class="content-list css">
-		   {% for post in site.posts %}
-		   		{% for tags in post.tags %}
-			  		{% if tags == 'css' %} 
-				  		<li class="list-box"><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-					{% endif %}
-				{% endfor %}
-		       
-		   {% endfor %}
-		</ul>
-		<ul class="content-list canvas">
-		   {% for post in site.posts %}
-		   		{% for tags in post.tags %}
-			  		{% if tags == 'canvas' %} 
-				  		<li class="list-box"><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-					{% endif %}
-				{% endfor %}
-		       
-		   {% endfor %}
-		</ul>
-		<div>
-			 {{content }}
-		</div>		
+		<!-- <iframe src="" class="index-iframe"></iframe> -->
+		<div class="mask" id="mask">
+			<div class="rotate-mask">
+                <div></div>
+                <div></div>
+            </div>
+		</div>
 	</div>
 
 	<div class="shadow top-left"></div>
