变相实现动态列表

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 		<img src="" class="index-user-img">
 	</div>
 	<div class="navList">
-		<a class="nav-list css"  href="javascript:;" hover-text="css" type="css" data-href="csslist.html">css</a> 
+		<a class="nav-list css"  href="javascript:;" hover-text="css" type="css" data-href="cssList.html">css</a> 
 		<a class="nav-list canvas" href="javascript:;" hover-text="canvas" type="canvas" data-href="canvasList.html">canvas</a>
 		<a class="nav-list js" href="javascript:;" hover-text="javaScript" type="javaScript" data-href="javaScriptList.html">js</a>
 		<a class="nav-list nodeJs" href="javascript:;" hover-text="nodeJs" type="nodeJs" data-href="nodeJsList.html">nodeJs</a>
