变相实现动态列表

--- a/_posts/2016-08-30-first-post.html
+++ b/_posts/2016-08-30-first-post.html
@@ -2,9 +2,9 @@
 layout: detail
 title: Flexbox栅格系统 
 tags: [css]
-pageImgurl: //ocifiuhrn.bkt.clouddn.com/Flexbox.jpg 
+pageImgurl:https: //ocifiuhrn.bkt.clouddn.com/Flexbox.jpg 
 ---
 <h1>{{ page.title }}</h1>
 <p>之前看了一篇将Flexbox栅格系统的文章，觉得很棒，现记录下来，并做几个实验，写一写自己的理解</p>
 <p>原文链接：</p><a href="https://zhuanlan.zhihu.com/p/21887541">https://zhuanlan.zhihu.com/p/21887541</a>
-<a onclick="history.go(-1)" href="javascript:; ">Go back</a>
+<a onclick="history.go(-1)" href="javascript:;">Go back</a>
