--- a/_posts/2016-08-28-first-post.html
+++ b/_posts/2016-08-28-first-post.html
@@ -1,8 +1,8 @@
 ---
-layout: detail
+layout: list-detail
 title: Flexbox栅格系统 
 tags: [css]
-pageImgurl:https: //ocifiuhrn.bkt.clouddn.com/Flexbox.jpg 
+pageImgurl: https://ocifiuhrn.bkt.clouddn.com/Flexbox.jpg 
 ---
 <h1>{{ page.title }}</h1>
 <p>之前看了一篇将Flexbox栅格系统的文章，觉得很棒，现记录下来，并做几个实验，写一写自己的理解</p>
