--- a/gulpList.html
+++ b/gulpList.html
@@ -8,7 +8,7 @@ layout: gulp-default
 			  		{% if tags == 'gulp' %} 
 				  		<li class="list-box">	
 				  			<div class="pageImg" style="background-image: url({{ post.pageImgurl }})" title="{{ post.title }}"  ></div>
-				  			<a href="{{ site.baseurl }}{{ post.url }}">
+				  			<a href="javascript:void(0);" data-href="{{ site.baseurl }}{{ post.url }}">
 					  			<span class="list-box-title">
 					  				<p class="p1">{{ post.title }}</p> 
 					  			</span>
